Adds dedicated profile for Java 17